--- a/src/app/editor/editor.component.html
+++ b/src/app/editor/editor.component.html
@@ -46,7 +46,7 @@
               </div>
             </fieldset>
 
-            <button class="btn btn-lg pull-xs-right btn-primary" type="button" (click)="submitForm()">
+            <button class="btn btn-lg pull-xs-right btn-primary" type="button" (click)="submitForm()" i18n>
               Publish Article
             </button>
 
