--- a/src/app/shared/article-helpers/article-list.component.html
+++ b/src/app/shared/article-helpers/article-list.component.html
@@ -4,12 +4,12 @@
 </app-article-preview>
 
 <div class="app-article-preview"
-  [hidden]="!loading">
+  [hidden]="!loading" i18n>
   Loading articles...
 </div>
 
 <div class="app-article-preview"
-  [hidden]="loading || results.length">
+  [hidden]="loading || results.length" i18n>
   No articles are here... yet.
 </div>
 
