--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-md-6 offset-md-3 col-xs-12">
 
-        <h1 class="text-xs-center">Your Settings</h1>
+        <h1 class="text-xs-center" i18n>Your Settings</h1>
 
         <app-list-errors [errors]="errors"></app-list-errors>
 
@@ -47,7 +47,7 @@
             </fieldset>
 
             <button class="btn btn-lg btn-primary pull-xs-right"
-              type="submit">
+              type="submit" i18n>
               Update Settings
             </button>
 
@@ -58,7 +58,7 @@
         <hr />
 
         <button class="btn btn-outline-danger"
-          (click)="logout()">
+          (click)="logout()" i18n>
           Or click here to logout.
         </button>
 
