--- a/src/app/shared/layout/footer.component.html
+++ b/src/app/shared/layout/footer.component.html
@@ -1,7 +1,7 @@
 <footer>
   <div class="container">
     <a class="logo-font" routerLink="/">conduit</a>
-    <span class="attribution">
+    <span class="attribution" i18n>
       &copy; {{ today | date: 'yyyy' }}.
       An interactive learning project from <a href="https://thinkster.io">Thinkster</a>.
       Code licensed under MIT.
